--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://intelligentdnb.github.io", 
+  "homepage": "https://intelligentdnb.github.io/intelligentdnb.github.io/public/index.html", 
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
